--- a/navbar.html
+++ b/navbar.html
@@ -36,7 +36,9 @@
 </div>
 </div>
     </header>
-    
+    <a href="login.html">LoginPage</a>
+    <a href="mensPage.html">MenPage</a>
+    <a href="singup.html">SignupPage</a>
 
 </body>
 </html>
